# cast-control

./: .gitignore  GTM.md  GUI spec.md  README.md  pyproject.toml
castcontrol/: __init__.py  cli.py  tui.py  tui.tcss
castcontrol/lib/: casting.py  discovery.py  network.py  server.py  transcode.py
castcontrol/screens/: casting.py  device_scan.py  transcode_confirm.py  transcode_progress.py
castcontrol/widgets/: device_pane.py  file_pane.py
docs/: cast-control.rb  castlocal.rb  demo.tape  index.html
