[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cast-control"
version = "0.1.0"
description = "Cast any local video to Chromecast — CLI and retro TUI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Yuri" }]
keywords = ["chromecast", "video", "streaming", "tui", "cast", "media"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "pychromecast>=13.0",
    "textual>=0.50.0",
]

[project.urls]
Homepage = "https://github.com/YuriKovalov22/cast-control"
Issues = "https://github.com/YuriKovalov22/cast-control/issues"

[tool.hatch.build.targets.wheel]
packages = ["castcontrol"]

[project.scripts]
cast = "castcontrol.cli:main"
cast-tui = "castcontrol.tui:main"
